# fdm

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/: LICENSE_HEADER.txt  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: pre-commit.yaml
exts/: nav_collectors  nav_importer  nav_tasks
exts/fdm/: setup.py
fdm_ros/: example.rviz  rosbag_extractor.py  run_extraction_perceotion_box.sh
ros/: README.md  setup.py
ros/fdm_navigation/: __init__.py
ros/fdm_navigation_ros/: CMakeLists.txt  package.xml  setup.py
ros/fdm_navigation_ros/config/: default.yaml  marker.rviz  replay.rviz  replay_new.rviz  replay_perceptive_fig.rviz  replay_title_fig.rviz  test.rviz
ros/fdm_navigation_ros/dynamic_reconfigure/: Base.cfg
ros/fdm_navigation_ros/launch/: planner.launch  record.launch
ros/fdm_navigation_ros/meshes/: anymal_base.dae
ros/fdm_navigation_ros/scripts/: planner_node.py
ros/rosbag_tools/: rosbag_extractor.py  run_extraction_normal_robot.sh
scripts/: beat_the_planner.py  create_colors_for_plot.py  debug.py  eval.py  eval_metrics.py  eval_metrics.sh  eval_multi_env.py  height_scan_transformer.py  merge_mesh.sh  plan.py  plan_metric.py  plan_metric.sh  plan_test.py  plan_test_metric.sh  plan_test_plot.sh  pre_training_exteroception.py  pre_training_proprioception.py  real_world_eval_metrics.py  real_world_test.py  test.py  test_data_collector.py  test_data_collector.sh  test_data_collector_at_once.py  test_friction.py  test_platforms.sh  train.py  train_all.sh
(+195 files in other folders)
